--- a/anfahrt.html
+++ b/anfahrt.html
@@ -27,9 +27,9 @@
                         </a>
                         <div class="nav-collapse collapse">
                             <ul class="nav">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="divider-vertical"></li>
-                                <li><a href="anfahrt.html">Anfahrt / Kontakt</a></li>
+                                <li class="active"><a href="anfahrt.html">Anfahrt / Kontakt</a></li>
                                 <li class="divider-vertical"></li>
                                 <li><a href="impressum.html">Impressum</a></li>
                                 <li class="divider-vertical"></li>
@@ -39,28 +39,19 @@
                 </div>
             </div><!-- /.navbar -->
 
-            <div class="hero-unit">
-                <p>Beratung, wie sie sein sollte ...</p>
-                <h2 class="text-center">ehrlich, fair &amp; nachhaltig</h2>
-                <p class="text-right">... Wiens Immobilien &amp; Finanzservice</p>
-            </div>
-
             <div class="row">
                 <div class="span12">
-                    <ul id="fragen" class="unstyled">
-                        <li>Ihre Lebensversicherung hat <strong class="text-error">weniger angespart als eingezahlt wurde?</strong></li>
-                        <li>Ihr Riestervertrag ist auf Ihre erwachsenen Kinder <strong class="text-error">nicht vererbbar</strong>?</li>
-                        <li>Ihr Spar- / Bauspar-Vertrag bringt <strong class="text-error">weniger Zinsen als die Inflation vernichtet</strong>?</li>
-                        <li>Ihre Aktien sind <strong class="text-error">schon wieder gefallen?</strong></li>
-                        <li>Ihre Miete ist <strong class="text-error">zu hoch</strong>?</li>
-                        <li>Ihre Alters-Rente wird <strong class="text-error">zu klein</strong> sein?</li>
-                        <li>Sie wollen <strong class="text-error">für sich und für Ihre Kinder vorsorgen</strong>?</li>
-                        <li>Sie machen sich <strong class="text-error">Sorgen um den Euro</strong>?</li>
-                        <li>Sie zahlen <strong class="text-error">zu viel Steuern</strong>?</li>
-                        <li>Sie suchen eine Immobilie und das möglichst <strong class="text-error">problem- und stressfrei</strong>?</li>
-                        <li>Sie wollen Ihre Immobilie verkaufen/vermieten und suchen dafür einen <strong class="text-error">seriösen Partner</strong>?</li>
-                    </ul>
-                    <p>Es gibt viele gute Gründe für ein Gespräch mit uns.</p>
+                    <h1>Kontakt</h1>
+                    <p>
+                        Telefon: 02241 88310<br>
+                        Telefax: 02241 88311<br>
+                        E-Mail: <a href="mailto:info@wiens-makler.de">info@wiens-makler.de</a>
+                    </p>
+
+                    <h1>Anfahrt</h1>
+                    <p>Heidenaustr. 64<br>
+                    53842 Troisdorf</p>
+                    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.de/maps?sll=50.8180547,7.146057199999999&amp;sspn=0.1796137122780054,0.4945158081361927&amp;t=m&amp;q=Wiens+Immobilien+und+Finanzservice,+Heidenaustra%C3%9Fe+64,+Troisdorf&amp;dg=opt&amp;ie=UTF8&amp;hq=Wiens+Immobilien+und+Finanzservice,&amp;hnear=Heidenaustra%C3%9Fe+64,+Spich+53842+Troisdorf&amp;cid=4232569913104802557&amp;ll=50.831096,7.130384&amp;spn=0.018974,0.036478&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br><small><a href="https://www.google.de/maps?sll=50.8180547,7.146057199999999&amp;sspn=0.1796137122780054,0.4945158081361927&amp;t=m&amp;q=Wiens+Immobilien+und+Finanzservice,+Heidenaustra%C3%9Fe+64,+Troisdorf&amp;dg=opt&amp;ie=UTF8&amp;hq=Wiens+Immobilien+und+Finanzservice,&amp;hnear=Heidenaustra%C3%9Fe+64,+Spich+53842+Troisdorf&amp;cid=4232569913104802557&amp;ll=50.831096,7.130384&amp;spn=0.018974,0.036478&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">Größere Kartenansicht</a></small>
                 </div>
             </div>
         </div>
