Add 34c to Impressum

--- a/impressum.html
+++ b/impressum.html
@@ -73,6 +73,9 @@
                     Kronenstr. 13, 10117 Berlin</p>
                     <p>Wir halten keine unmittelbare oder mittelbare Beteiligung der Stimmrechte oder des Kapitals an einem Versicherungsunternehmen und ebenso kein Versicherungsunternehmen h&auml;lt mittelbare oder unmittelbare Beteiligung der Stimmrechte oder des Kapitals an unserem Unternehmen.</p>
 
+                    <p>Erlaubnis nach § 34c Abs. 1 GewO, Aufsichtsbehörde: Rhein-Sieg-Kreis, Kaiser-Wilhelm-Platz 1 
+53721 Siegburg</p>
+                    
                     <h2>Umsatzsteuer-ID</h2>
                     <p>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz:<br>
                     DE239395538</p>
